--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/angela.jpg" alt="Angela profile picture"></td>
+            <td><img src="Images/Angela.jpg" alt="Angela profile picture"></td>
             <td>
                 <h1>Chris Klingler</h1>
                 <p><em>Blooper Reel Officionado</em></p>
