--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <tr>
             <td><img src="Images/Angela.jpg" alt="Angela profile picture"></td>
             <td>
-                <h1>Chris Klingler</h1>
+                <h1>Christopher</h1>
                 <p><em>Blooper Reel Officionado</em></p>
                 <br>
                 <p>I am a gamer and sleeper. I like movies and stuff. I do IT work as a job. My wife is the best in the world.</p>
